@@ -2,6 +2,7 @@ pref("extensions.fox@replace.fx.description", "chrome://foxreplace/locale/foxrep
 pref("extensions.foxreplace.substitutionListJSON", '{"version":"0.14","groups":[]}');
 pref("extensions.foxreplace.autoReplaceOnLoad", false);
 pref("extensions.foxreplace.replaceUrls", false);
+pref("extensions.foxreplace.replaceScripts", false);
 pref("extensions.foxreplace.enableSubscription", false);
 pref("extensions.foxreplace.subscriptionUrl", "");
 pref("extensions.foxreplace.subscriptionPeriod", 1);
